--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,8 +1,8 @@
 {
   "name": "common",
   "version": "0.0.0",
-  "description": "Praction - internal node module package for NestJS framework (@common)",
-  "author": "Praction Network",
+  "description": "Praction Networks - internal node module package for NestJS framework (@common)",
+  "author": "Praction Networks",
   "homepage": "https://developer.praction.in",
   "license": "UNLICENSED",
   "private": true,
