--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@praction/core",
+  "name": "@initbit/core",
   "version": "0.0.0",
-  "description": "Praction - internal node module package (@praction)",
-  "author": "Praction Networks",
+  "description": "Initbit - internal node module package (@initbit)",
+  "author": "Initbit Technologies<connect@inibit.com>",
   "private": true,
   "workspaces": [
     "packages/*"
@@ -17,13 +17,20 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
-    "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.2",
-    "@nx/eslint": "20.4.0",
-    "@nx/eslint-plugin": "20.4.0",
-    "@nx/jest": "20.4.0",
-    "@nx/js": "20.4.0",
-    "@nx/nest": "^20.4.0",
+    "@golevelup/ts-jest": "^0.6.2",
+    "@nestjs/common": "^11.0.9",
+    "@nestjs/config": "^4.0.0",
+    "@nestjs/core": "^11.0.9",
+    "@nestjs/microservices": "^11.0.9",
+    "@nestjs/platform-express": "^11.0.9",
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/swagger": "^11.0.3",
+    "@nestjs/testing": "^11.0.9",
+    "@nx/eslint": "20.4.3",
+    "@nx/eslint-plugin": "20.4.3",
+    "@nx/jest": "20.4.3",
+    "@nx/js": "20.4.3",
+    "@nx/nest": "20.4.3",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -34,7 +41,7 @@
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "lerna": "^8.1.9",
-    "nx": "20.4.0",
+    "nx": "20.4.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -42,15 +49,6 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
     "verdaccio": "^5.0.4"
-  },
-  "dependencies": {
-    "@nestjs/common": "^10.0.2",
-    "@nestjs/core": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.2",
-    "@nestjs/swagger": "^7.1.12",
-    "class-validator": "^0.14.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
   },
   "nx": {
     "includedScripts": []
