--- a/project.json
+++ b/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "@praction/core",
+  "name": "@initbit",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "targets": {
     "local-registry": {
