--- a/packages/nats-jetstream/package.json
+++ b/packages/nats-jetstream/package.json
@@ -14,7 +14,7 @@
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
   "files": [
-    "dist/**/*"
+    "src/**/*"
   ],
   "engines": {
     "node": ">=18.0.0"
