feat(nestjs-jetstream): Update transport architecture and add advanced features
- feat: Add advanced consumer configuration options (DeliverPolicy, AckPolicy, AckWait, FilterSubject, FilterSubjects)
- feat: Add direct access to NATS API through NatsContext (ack, nack, term, working, getMetadata)
- docs: Update README with examples for new features
- docs: Add repository and issue reporting information
- chore: Update keywords for better discoverability
- test: Update tests to reflect new architecture

--- a/packages/nats-jetstream/package.json
+++ b/packages/nats-jetstream/package.json
@@ -3,11 +3,31 @@
   "version": "1.0.2",
   "description": "NestJS custom NATS JetStream transport",
   "author": "Initbit Technologies<connect@inibit.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/initbitx/nestjs-common-package.git",
+    "directory": "packages/nats-jetstream"
+  },
+  "bugs": {
+    "url": "https://github.com/initbitx/nestjs-common-package/issues"
+  },
+  "homepage": "https://github.com/initbitx/nestjs-common-package/tree/main/packages/nats-jetstream#readme",
   "keywords": [
     "nestjs",
     "microservices",
     "nats",
-    "jetstream"
+    "jetstream",
+    "transport",
+    "pubsub",
+    "publish-subscribe",
+    "request-response",
+    "messaging",
+    "streaming",
+    "queue",
+    "typescript",
+    "high-availability",
+    "acknowledgment",
+    "event-driven"
   ],
   "license": "MIT",
   "type": "commonjs",
