--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "author": "Initbit Technologies<connect@inibit.com>",
   "license": "MIT",
   "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/initbitx/nestjs-common-package.git"
+  },
+  "bugs": {
+    "url": "https://github.com/initbitx/nestjs-common-package/issues"
+  },
+  "homepage": "https://github.com/initbitx/nestjs-common-package#readme",
   "workspaces": [
     "packages/*"
   ],
