--- a/packages/nats-jetstream/package.json
+++ b/packages/nats-jetstream/package.json
@@ -41,7 +41,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test": "jest"
   },
   "peerDependencies": {
     "@nestjs/common": "^9.0.0 || ^10.0.0 || ^11.0.0",
