chore(nats-jetstream): release v1.3.0 — server-side filtering & multi-stream fixes
Prepare release v1.3.0:
- Remove plain-NATS fallback; prefer server-side JetStream consumers and recommend publishers use JetStream (`js.publish`).
- Add support for `filter_subject` / `filter_subjects` in per-stream consumer configuration.
- Improve multi-stream registration/remapping and example app to demonstrate filtered durable consumers.
- Update README and CHANGELOG accordingly.

--- a/packages/nats-jetstream/package.json
+++ b/packages/nats-jetstream/package.json
@@ -28,16 +28,16 @@
   ],
   "license": "MIT",
   "type": "commonjs",
-  "main": "./src/index.js",
-  "types": "./src/index.d.ts",
+  "main": "./lib/src/index.js",
+  "types": "./lib/src/index.d.ts",
   "files": [
-    "src/**/*"
+    "lib/**/*"
   ],
   "engines": {
     "node": ">=18.0.0"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.lib.json",
     "prepublish": "npm run build",
     "test": "jest"
   },
