--- a/packages/nats-jetstream/project.json
+++ b/packages/nats-jetstream/project.json
@@ -14,7 +14,7 @@
   },
   "tags": [],
   "targets": {
-    "build": {
+    "compile": {
       "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
@@ -25,6 +25,12 @@
         "assets": [
           "packages/nats-jetstream/*.md"
         ]
+      }
+    },
+    "build": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "nx run @initbit/nestjs-jetstream:compile && node tools/scripts/copy-js-to-lib.cjs"
       }
     },
     "nx-release-publish": {
