--- a/packages/nats-jetstream/example/package.json
+++ b/packages/nats-jetstream/example/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "validate": "ts-node src/validate-config.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "ts-node src/main.ts"
+    "start": "ts-node src/main.ts",
+    "publish-event": "ts-node src/publish-event.ts"
   },
   "devDependencies": {
     "ts-node": "^10.9.1",
